--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 dist/
 *.spec
 
+
 # Ignorer les fichiers compilés
 *.pyc
 __pycache__/
@@ -14,3 +15,4 @@ __pycache__/
 # Ignorer les fichiers de logs et temporaires
 *.log
 *.tmp
+*.iss
